Find for the username implemented; RecyclerView for user info showing implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_search">Search</string>
     <string name="title_profile">Profile</string>
     <string name="search_hint">Enter the GitHub username</string>
+    <string name="avatar">Here was the avatar</string>
 </resources>
